--- a/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
@@ -100,6 +100,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Ask_Preferred_First_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Ask_Phone__c</field>
             </layoutItems>
             <layoutItems>
@@ -123,6 +127,14 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Private_Event__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ask_Last_Name_As_Student__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ask_Preferred_Class_Year__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
